--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "build": "next build",
     "start": "next start",
     "dev": "npm run lint:fix && npm run services:up && next dev",
-    "services:up": "docker compose -f infra/compose.yaml up -d",
-    "services:stop": "docker compose -f infra/compose.yaml stop",
-    "services:down": "docker compose -f infra/compose.yaml down",
+    "services:up": "docker compose -f src/infra/compose.yaml up -d",
+    "services:stop": "docker compose -f src/infra/compose.yaml stop",
+    "services:down": "docker compose -f src/infra/compose.yaml down",
     "lint:check": "prettier --check .",
     "lint:fix": "prettier --write .",
     "test": "jest",
@@ -18,17 +18,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/jest": "^29.5.11",
+    "bootstrap": "^5.3.2",
     "next": "^13.1.6",
     "pg": "^8.11.3",
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "styled-components": "^6.1.6"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.11",
     "@types/next": "^9.0.0",
     "@types/pg": "^8.10.9",
     "@types/react": "^18.2.46",
+    "@types/react-helmet": "^6.1.11",
     "jest": "^29.7.0",
     "prettier": "^3.1.1",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.3.3"
   }
 }
