--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-rewards": "^2.0.4",
     "styled-components": "^6.1.6"
   },
   "devDependencies": {
