--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-rewards": "^2.0.4",
-    "styled-components": "^6.1.6"
+    "styled-components": "^6.1.6",
+    "sweetalert2": "^11.10.4"
   },
   "devDependencies": {
     "@types/jest": "^29.5.11",
