--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "^5.3.2",
     "next": "^13.1.6",
+    "next-connect": "^1.0.0-next.4",
     "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-helmet": "^6.1.0",
