--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "^5.3.2",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.1",
     "next": "^13.1.6",
     "next-connect": "^1.0.0-next.4",
