--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,6 @@
 POSTGRES_HOST=  
 POSTGRES_PORT=5432
 POSTGRES_USER=local_user
-POSTGRES_DB=local_db
+POSTGRES_DATABASE=local_db
 POSTGRES_PASSWORD=local_password
 ENDPOINT=http://localhost:3000
