--- a/.env.development
+++ b/.env.development
@@ -4,3 +4,5 @@ POSTGRES_USER=local_user
 POSTGRES_DATABASE=local_db
 POSTGRES_PASSWORD=local_password
 ENDPOINT=http://localhost:3000
+EMAIL_USER=
+PASSWORD_USER=
