--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@react-input/mask": "^1.0.20",
     "bootstrap": "^5.3.2",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.1",
     "next": "^13.1.6",
     "next-connect": "^1.0.0-next.4",
+    "nodemailer": "^6.9.9",
     "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-helmet": "^6.1.0",
