--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-input/mask": "^1.0.20",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.1",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.1",
     "next": "^13.1.6",
