--- a/.env.development
+++ b/.env.development
@@ -5,5 +5,5 @@ POSTGRES_DATABASE=local_db
 POSTGRES_PASSWORD=local_password
 ENDPOINT=http://localhost:3000
 EMAIL_USER=
-PASSWORD_USER=
+EMAIL_PASSWORD=
 PROVIDER=local
