--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-loader-spinner": "^6.1.6",
     "react-rewards": "^2.0.4",
     "styled-components": "^6.1.6",
     "sweetalert2": "^11.10.4"
