--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-loader-spinner": "^6.1.6",
     "react-rewards": "^2.0.4",
     "styled-components": "^6.1.6",
-    "sweetalert2": "^11.10.4"
+    "sweetalert2": "^11.10.4",
+    "swiper": "^11.0.6"
   },
   "devDependencies": {
     "@types/jest": "^29.5.11",
