--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-input/mask": "^1.0.20",
-    "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.1",
@@ -36,8 +35,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-rewards": "^2.0.4",
     "styled-components": "^6.1.6",
-    "sweetalert2": "^11.10.4",
-    "swiper": "^11.0.6"
+    "sweetalert2": "^11.10.4"
   },
   "devDependencies": {
     "@types/jest": "^29.5.11",
