--- a/.env.development
+++ b/.env.development
@@ -6,4 +6,5 @@ POSTGRES_PASSWORD=local_password
 ENDPOINT=http://localhost:3000
 EMAIL_USER=
 EMAIL_PASSWORD=
+TOKEN_API_IP=606bd4a8bbea67
 PROVIDER=local
