--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@popperjs/core": "^2.11.8",
     "@react-input/mask": "^1.0.20",
+    "bootstrap": "^5.3.3",
     "chart.js": "^4.4.1",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.1",
@@ -45,6 +47,7 @@
     "@types/react-helmet": "^6.1.11",
     "jest": "^29.7.0",
     "prettier": "^3.1.1",
+    "sass": "^1.71.1",
     "ts-jest": "^29.1.1",
     "typescript": "^5.3.3"
   }
