--- a/package.json
+++ b/package.json
@@ -46,9 +46,11 @@
     "@types/react": "^18.2.46",
     "@types/react-helmet": "^6.1.11",
     "jest": "^29.7.0",
+    "nodemailer-mock": "^2.0.5",
     "prettier": "^3.1.1",
     "sass": "^1.71.1",
     "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
 }
