--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@popperjs/core": "^2.11.8",
+    "@prisma/client": "^5.11.0",
     "@react-input/mask": "^1.0.20",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.1",
@@ -46,8 +47,8 @@
     "@types/react": "^18.2.46",
     "@types/react-helmet": "^6.1.11",
     "jest": "^29.7.0",
-    "nodemailer-mock": "^2.0.5",
     "prettier": "^3.1.1",
+    "prisma": "^5.11.0",
     "sass": "^1.71.1",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
