--- a/.env.development
+++ b/.env.development
@@ -1,8 +1,8 @@
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
-POSTGRES_USER=local_user
-POSTGRES_DATABASE=local_db_portfolio
-POSTGRES_PASSWORD=local_password
+POSTGRES_USER=docker
+POSTGRES_PASSWORD=docker
+POSTGRES_DATABASE=portfolio
 ENDPOINT=http://localhost:3000
 EMAIL_USER=
 EMAIL_PASSWORD=
