--- a/src/infra/compose.yaml
+++ b/src/infra/compose.yaml
@@ -1,7 +1,14 @@
 services:
-  database:
-    image: "postgres:16.1-alpine3.18"
-    env_file:
-      - ../../.env.development
+  postgres:
+    image: bitnami/postgresql:latest
     ports:
-      - "5432:5432"
+      - '5432:5432'
+    environment:
+      - POSTGRES_USER=docker
+      - POSTGRES_PASSWORD=docker
+      - POSTGRES_DB=portfolio
+    volumes:
+      - portfolio_pg_data:/bitnami/postgresql
+
+volumes:
+  portfolio_pg_data:
