--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "scripts": {
     "build": "next build",
     "start": "next start",
-    "dev": "npm run lint:fix && npm run services:up && npm install && next dev",
+    "dev": "npm run services:up && wait:postgres && next dev",
     "services:up": "docker compose -f src/infra/compose.yaml up -d",
     "services:stop": "docker compose -f src/infra/compose.yaml stop",
     "services:down": "docker compose -f src/infra/compose.yaml down",
     "lint:check": "prettier --check .",
     "lint:fix": "prettier --write .",
-    "test": "jest",
-    "test:watch": "jest --watchAll"
+    "test": "npm run services:up && concurrently -n next,jest --hide next -k -s command-jest \"next dev\" \"jest --runInBand --verbose\"",
+    "test:watch": "jest --watchAll",
+    "wait:postgres": "tsx ./src/assets/utils/wait-for-postgres.js"
   },
   "author": "",
   "license": "ISC",
@@ -25,6 +26,7 @@
     "@popperjs/core": "^2.11.8",
     "@prisma/client": "^5.11.0",
     "@react-input/mask": "^1.0.20",
+    "async-retry": "^1.3.3",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.1",
     "cross-env": "^7.0.3",
@@ -41,17 +43,20 @@
     "sweetalert2": "^11.10.4"
   },
   "devDependencies": {
+    "@types/async-retry": "^1.4.8",
     "@types/jest": "^29.5.11",
     "@types/next": "^9.0.0",
     "@types/pg": "^8.10.9",
     "@types/react": "^18.2.46",
     "@types/react-helmet": "^6.1.11",
+    "concurrently": "^8.2.2",
     "jest": "^29.7.0",
     "prettier": "^3.1.1",
     "prisma": "^5.11.0",
     "sass": "^1.71.1",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
+    "tsx": "^4.15.7",
     "typescript": "^5.3.3"
   }
 }
