--- a/src/infra/compose.yaml
+++ b/src/infra/compose.yaml
@@ -1,5 +1,6 @@
 services:
   postgres:
+    container_name: "postgres-dev-portfolio"
     image: bitnami/postgresql:latest
     ports:
       - "5432:5432"
