--- a/.env.development
+++ b/.env.development
@@ -7,3 +7,4 @@ ENDPOINT=http://localhost:3000
 EMAIL_USER=
 EMAIL_PASSWORD=
 PROVIDER=local
+DATABASE_URL=postgres://$POSTGRES_USER:$POSTGRES_PASSWORD@$POSTGRES_HOST:$POSTGRES_PORT/$POSTGRES_DATABASE
