--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "test": "npm run services:up && concurrently -n next,jest --hide next -k -s command-jest \"next dev\" \"jest --runInBand --verbose\"",
     "test:watch": "jest --watchAll",
     "wait:postgres": "tsx ./src/assets/utils/wait-for-postgres.js",
-    "migrations:up": "npx prisma migrate deploy"
+    "migrations:up": "npx prisma migrate deploy && npm run migrations:populate",
+    "migrations:create": "npx prisma migrate dev",
+    "migrations:populate": "tsx ./prisma/seed.ts"
   },
   "author": "",
   "license": "ISC",
@@ -50,11 +52,13 @@
     "@types/pg": "^8.10.9",
     "@types/react": "^18.2.46",
     "@types/react-helmet": "^6.1.11",
+    "@types/supertest": "^6.0.2",
     "concurrently": "^8.2.2",
     "jest": "^29.7.0",
     "prettier": "^3.1.1",
     "prisma": "^5.11.0",
     "sass": "^1.71.1",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.15.7",
