--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "services:up": "docker compose -f src/infra/compose.yaml up -d",
     "services:stop": "docker compose -f src/infra/compose.yaml stop",
     "services:down": "docker compose -f src/infra/compose.yaml down",
-    "lint:check": "prettier --check .",
-    "lint:fix": "prettier --write .",
+    "lint:prettier:check": "prettier --check .",
+    "lint:prettier:fix": "prettier --write .",
+    "lint:eslint:check": "eslint .",
     "test": "npm run services:up && concurrently -n next,jest --hide next -k -s command-jest \"next dev\" \"jest --runInBand --verbose\"",
     "test:watch": "jest --watchAll",
     "wait:postgres": "tsx ./src/assets/utils/wait-for-postgres.js",
@@ -54,6 +55,10 @@
     "@types/react-helmet": "^6.1.11",
     "@types/supertest": "^6.0.2",
     "concurrently": "^8.2.2",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.5",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jest": "^28.6.0",
     "jest": "^29.7.0",
     "prettier": "^3.1.1",
     "prisma": "^5.11.0",
